--- a/index.html
+++ b/index.html
@@ -1,4 +1,51 @@
-<!DOCTYPE html>
+<!-- ============================
+   ZQ Portfolio – Polished Head
+   ============================ -->
+
+<!-- Basic Meta -->
+<!-- TODO: Update description to keep SEO sharp (under 160 chars) -->
+<meta name="description" content="Zubin Qayam — Business Development & Marketing Executive in Oman's industrial healthcare sector. Strategic partnerships, Vision 2040 alignment, and multi-million-dollar project leadership." />
+
+<!-- Open Graph / Social Sharing -->
+<!-- TODO: Replace og:image with your real preview image in /public -->
+<meta property="og:title" content="Zubin Qayam | Portfolio" />
+<meta property="og:description" content="Driving strategic partnerships and healthcare integration in Sohar Freezone, Sohar Port, and Shinas Port under Oman Vision 2040." />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://zubinqayam.github.io/zq-portfolio/" />
+<meta property="og:image" content="%PUBLIC_URL%/og-image.png" />
+
+<!-- Twitter Card -->
+<!-- TODO: Add your Twitter handle if you want -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Zubin Qayam | Portfolio" />
+<meta name="twitter:description" content="Strategic business development in Oman's industrial healthcare ecosystem." />
+<meta name="twitter:image" content="%PUBLIC_URL%/og-image.png" />
+
+<!-- Theme color -->
+<meta name="theme-color" content="#0f172a" />
+
+<!-- Favicon -->
+<!-- TODO: Add your favicon.ico in /public and update if needed -->
+<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+
+<!-- JSON-LD Schema -->
+<!-- TODO: Copilot can expand this with more job roles, projects, and orgs -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Zubin Qayam",
+  "jobTitle": "Corporate Business Development & Marketing Executive",
+  "email": "zubin.qayam@outlook.com",
+  "telephone": "+96878572706",
+  "address": {
+    "@type": "PostalAddress",
+    "addressLocality": "Sohar, Oman"
+  },
+  "url": "https://zubinqayam.github.io/zq-portfolio/",
+  "sameAs": [
+    "https://www.linkedin.com/in/zubin-qayam-p-m-b22bb7170/",
+    "https://developers.google.com/profile/u/zub<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
